# KizamuManga

./: .gitignore  LICENSE  MANIFEST.in  README.md  app_runner.py  config.json  config.py  config.toml  config.yaml  main.py  pyproject.toml  readme.me  requirements.txt  resultados.html  scrapers.txt
handlers/: __init__.py  args_handler.py  config_handler.py
kizamumanga/: app_runner.py  main.py
kizamumanga/core/: __init__.py  config.py  config.yaml  downloader.py  exceptions.py  logger.py  runner.py
kizamumanga/handlers/: args_handler.py  config_handler.py
kizamumanga/scraping/: __init__.py  weeb_central.py
kizamumanga/utils/: __init__.py  ascii.py  general_tools.py  loading_spinner.py
kizamumanga/utils/scraping/: scraper_base.py  scraper_interface.py
manga_downloads/: readme.txt
src/kizamumanga/: __init__.py  config.toml  main.py
src/kizamumanga/engine/: __init__.py  config.py  downloader.py  image_converter.py  logger.py  paths.py  runner.py
src/kizamumanga/handlers/: args_handler.py
src/kizamumanga/scraping/: __init__.py  base.py  inmanga.py  interface.py  leermangaesp.py  weeb_central.py  zona_tmo.py
src/kizamumanga/utils/: __init__.py  ascii.py  general_tools.py  loading_spinner.py  logger.py
utils/: __init__.py  config_handler.py  general_tools.py  loading_spinner.py  manga_downloader.py  multithread_tools.py  web_scrapping.py
utils/scraping/: __init__.py  scraper_interface.py  weeb_central.py
