[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kizamu_manga"
version = "0.1.0"
description = "Un descargador de mangas desde la línea de comandos usando Playwright, BeautifulSoup y aiohttp para hacer scraping de sitios web."
authors = [
    { name="Cocera Cia", email="coceraciamiguel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.1",
    "beautifulsoup4>=4.13.0",
    "playwright>=1.53.0",
    "PyYAML>=6.0.0"
]

[project.scripts]
manga_downloader = "kizamu.cli:main"
